--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RRADIANT REFLECTION - Premium Jewelry Collection</title>
-    <meta name="description" content="Discover RRADIANT REFLECTION's exquisite collection of premium jewelry. From elegant earrings to stunning necklaces and bracelets - find your perfect piece of radiant elegance." />
+    <title>RRADIANT REFLETION - Premium Jewelry Collection</title>
+    <meta name="description" content="Discover RRADIANT REFLETION's exquisite collection of premium jewelry. From elegant earrings to stunning necklaces and bracelets - find your perfect piece of radiant elegance." />
   </head>
   <body>
     <div id="root"></div>
